# papersqueeze

./: config.yaml  post_consume.sh  templates.yaml
papersqueeze/: .gitignore  README.md  analyze_inbox.py  docker-compose-office.yaml  post_consume.sh  pyproject.toml  requirements.txt  setup_venv.sh  tail-logs.sh
papersqueeze/config/: config.example.yaml  templates.example.yaml
papersqueeze/docs/: architecture.md  custom-fields.md  paperless-setup.md  roadmap.md
papersqueeze/src/papersqueeze/: __init__.py  __main__.py  cli.py  exceptions.py
papersqueeze/src/papersqueeze/api/: __init__.py  claude.py  paperless.py
papersqueeze/src/papersqueeze/config/: __init__.py  loader.py  schema.py
papersqueeze/src/papersqueeze/models/: __init__.py  document.py  extraction.py
papersqueeze/src/papersqueeze/processors/: __init__.py  base.py  fines.py  general.py  tax.py  utilities.py
papersqueeze/src/papersqueeze/services/: __init__.py  confidence.py  extraction.py  merge.py  processor.py  review.py
papersqueeze/src/papersqueeze/utils/: __init__.py  formatting.py  normalization.py
papersqueeze/tests/: __init__.py  conftest.py
papersqueeze/tests/integration/: __init__.py
papersqueeze/tests/unit/: __init__.py  test_confidence.py  test_merge.py  test_normalization.py
