[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papersqueeze"
version = "0.1.0"
description = "AI-powered document metadata enhancer for paperless-ngx"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "PaperSqueeze Contributors" }
]
keywords = ["paperless-ngx", "ocr", "document-management", "ai", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Indexing",
]
# Minimal dependencies - only what's NOT in paperless-ngx
dependencies = [
    "anthropic>=0.40.0",      # Claude SDK - the only truly new dependency
]
# Note: pydantic, pyyaml, requests are already in paperless-ngx
# We use httpx which anthropic pulls in as a dependency

[project.optional-dependencies]
# For local development with nice features
full = [
    "rich>=13.0",             # Pretty terminal output
    "structlog>=24.0",        # Structured logging
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "respx>=0.21",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-PyYAML",
]

[project.scripts]
papersqueeze = "papersqueeze.cli:main"

[project.urls]
Homepage = "https://github.com/papersqueeze/papersqueeze"
Documentation = "https://github.com/papersqueeze/papersqueeze#readme"
Repository = "https://github.com/papersqueeze/papersqueeze"
Issues = "https://github.com/papersqueeze/papersqueeze/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/papersqueeze"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["papersqueeze"]

[tool.coverage.run]
source = ["src/papersqueeze"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
